--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.34"
+env_logger = "0.11.2"
 itertools = "0.12.1"
+log = "0.4.21"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
